--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <meta charset="utf-8" />
+    <meta name="'viewport" content="width=device-width, initial-scale=1" />
+    <title>home</title>
   </head>
   <body>
     <h1>Welcome to the home page</h1>
