--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -8,5 +8,8 @@
     <h1>Hello!</h1>
     <h2><%= spot.title %></h2>
     <div>my favorite spot <%= spot.location %></div>
+    <footer>
+      <a href="/spots">all spots</a>
+    </footer>
   </body>
 </html>
