--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -7,6 +7,8 @@
   <body>
     <h1>Hello!</h1>
     <h2><%= spot.title %></h2>
+    <div>edit</div>
+    <a href="/spots/<%= spot.id %>/edit">edit</a>
     <div>my favorite spot <%= spot.location %></div>
     <footer>
       <a href="/spots">all spots</a>
