--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -1,20 +1,12 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Spot</title>
-  </head>
-  <body>
-    <form action="/spots" method="post">
-      <div>
-        <label for="title">Title</label>
-        <input type="text" name="title" id="spot[title]" />
-      </div>
-      <div>
-        <label for="location">Location</label>
-        <input type="text" name="location" id="spot[location]" />
-      </div>
-      <input type="submit" value="Create Spot" />
-    </form>
-  </body>
-</html>
+<% layout('layouts/Boilerplate') %>
+<form action="/spots" method="post">
+  <div>
+    <label for="title">Title</label>
+    <input type="text" name="title" id="spot[title]" />
+  </div>
+  <div>
+    <label for="location">Location</label>
+    <input type="text" name="location" id="spot[location]" />
+  </div>
+  <input type="submit" value="Create Spot" />
+</form>
