--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -1,19 +1,11 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Show</title>
-  </head>
-  <body>
-    <h1>Hello!</h1>
-    <h2><%= spot.title %></h2>
-    <a href="/spots/<%= spot.id %>/edit">edit</a>
-    <form action="/spots/<%= spot.id %>?_method=DELETE" method="post">
-      <button>delete</button>
-    </form>
-    <div>my favorite spot <%= spot.location %></div>
-    <footer>
-      <a href="/spots">all spots</a>
-    </footer>
-  </body>
-</html>
+<% layout('layouts/Boilerplate') %>
+<h1>Hello!</h1>
+<h2><%= spot.title %></h2>
+<a href="/spots/<%= spot.id %>/edit">edit</a>
+<form action="/spots/<%= spot.id %>?_method=DELETE" method="post">
+  <button>delete</button>
+</form>
+<div>my favorite spot <%= spot.location %></div>
+<footer>
+  <a href="/spots">all spots</a>
+</footer>
