--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,10 +10,10 @@
     />
     <title>Boilerplate</title>
   </head>
-  <body>
+  <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar.ejs') %>
     <main class="container mt-5"><%- body %></main>
-
+    <%- include('../partials/footer.ejs') %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
