--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -1,12 +1,36 @@
 <% layout('layouts/Boilerplate') %>
-<form action="/spots" method="post">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" name="title" id="spot[title]" />
+<div class="row">
+  <div class="col-6 offset-3">
+    <h1>New Spot</h1>
+    <form action="/spots" method="post">
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-control" type="text" name="title" id="spot[title]" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input
+          class="form-control"
+          type="text"
+          name="location"
+          id="spot[location]"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="image">Image Url</label>
+        <input class="form-control" type="text" name="image" id="spot[image]" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          class="form-control"
+          name="description"
+          id="spot[description]"
+        ></textarea>
+      </div>
+      <input class="btn btn-success" type="submit" value="Create Spot" />
+    </form>
   </div>
-  <div>
-    <label for="location">Location</label>
-    <input type="text" name="location" id="spot[location]" />
-  </div>
-  <input type="submit" value="Create Spot" />
-</form>
+</div>
