--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -1,13 +1,26 @@
 <% layout('layouts/Boilerplate') %>
 <h1>Hello!</h1>
-<h2><%= spot.title %></h2>
-<a href="/spots/<%= spot.id %>/edit">edit</a>
-<form action="/spots/<%= spot.id %>?_method=DELETE" method="post">
-  <button>delete</button>
-</form>
-<div><%= spot.location %></div>
-<img src="<%= spot.image %>" alt="" />
-<div><%= spot.description %></div>
-<footer>
-  <a href="/spots">all spots</a>
-</footer>
+<div class="row">
+  <div class="col-6 offset-3">
+    <div class="card">
+      <h5 class="card-header">Featured</h5>
+      <div class="card-body">
+        <h5 class="card-title"><%= spot.title %></h5>
+        <p class="card-text"><%= spot.description %></p>
+        <img class="img-fluid" src="<%= spot.image %>" alt="" />
+      </div>
+      <div class="mb-3 ml-3">
+        <a class="card-link btn btn-info" href="/spots/<%= spot.id %>/edit"
+          >edit</a
+        >
+        <form
+          class="d-inline"
+          action="/spots/<%= spot.id %>?_method=DELETE"
+          method="post"
+        >
+          <button class="btn btn-danger">delete</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
