--- a/views/spots/edit.ejs
+++ b/views/spots/edit.ejs
@@ -45,7 +45,7 @@
 <%= spot.description %></textarea
         >
       </div>
-      <input class="btn btn-success" type="submit" value="Create Spot" />
+      <input class="btn btn-success" type="submit" value="Edit Spot" />
     </form>
   </div>
 </div>
