--- a/views/spots/edit.ejs
+++ b/views/spots/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-6 offset-3">
     <h1>New Spot</h1>
-    <form action="/spots" method="post">
+    <form class="needs-validation" action="/spots" method="post" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -11,7 +11,9 @@
           name="title"
           id="spot[title]"
           value="<%= spot.title %>"
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -21,7 +23,9 @@
           name="location"
           id="spot[location]"
           value="<%= spot.location %>"
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <div class="mb-3">
