--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -2,10 +2,17 @@
 <div class="row">
   <div class="col-6 offset-3">
     <h1>New Spot</h1>
-    <form action="/spots" method="post">
+    <form class="needs-validation" action="/spots" method="post" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input class="form-control" type="text" name="title" id="spot[title]" />
+        <input
+          class="form-control"
+          type="text"
+          name="title"
+          id="spot[title]"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -14,9 +21,10 @@
           type="text"
           name="location"
           id="spot[location]"
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
-
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
         <input class="form-control" type="text" name="image" id="spot[image]" />
