endpoint for review creation & form action

--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -25,7 +25,7 @@
       </div>
       <div class="card-footer">2 days ago</div>
     </div>
-    <form class="mb-3">
+    <form action="/spots/<%= spot.id %>/reviews" method="post" class="mb-3">
       <h2>Leave a review</h2>
       <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
