--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -25,7 +25,12 @@
       </div>
       <div class="card-footer">2 days ago</div>
     </div>
-    <form action="/spots/<%= spot.id %>/reviews" method="post" class="mb-3">
+    <form
+      action="/spots/<%= spot.id %>/reviews"
+      method="post"
+      class="mb-3 needs-validation"
+      novalidate
+    >
       <h2>Leave a review</h2>
       <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
@@ -48,7 +53,9 @@
           rows="3"
           cols="30"
           placeholder="Write your review here"
+          required
         ></textarea>
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <button class="btn btn-primary" type="submit">Submit</button>
     </form>
