--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -66,6 +66,12 @@
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
         <p class="card-text">Review: <%= review.body %></p>
+        <form
+          action="/spots/<%= spot.id %>/reviews/<%= review.id %>?_method=DELETE"
+          method="post"
+        >
+          <button class="btn btn-sm btn-danger">Delete</button>
+        </form>
       </div>
     </div>
     <% } %>
