--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,7 +12,9 @@
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar.ejs') %>
-    <main class="container mt-5"><%= success %> <%- body %></main>
+    <main class="container mt-5">
+      <%- include('../partials/flash.ejs') %> <%- body %>
+    </main>
     <%- include('../partials/footer.ejs') %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
