--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -8,4 +8,14 @@
     aria-label="Close"
   ></button>
 </div>
+<% } %> <% if(error && error.length) {%>
+<div class="alert alert-danger" role="alert">
+  <%= error %>
+  <button
+    type="button"
+    class="btn-close"
+    data-bs-dismiss="alert"
+    aria-label="Close"
+  ></button>
+</div>
 <% } %>
