--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -7,8 +7,10 @@
         <h5 class="card-title"><%= spot.title %></h5>
         <p class="card-text"><%= spot.description %></p>
         <p class="card-text"><%= spot.location %></p>
+        <p class="card-text">submitted by <%= spot.author.username %></p>
         <img class="img-fluid" src="<%= spot.image %>" alt="" />
       </div>
+      <% if(currentUser && spot.author.equals(currentUser._id)) {%>
       <div class="card-body">
         <div class="mb-3 ml-3">
           <a class="card-link btn btn-info" href="/spots/<%= spot.id %>/edit"
@@ -23,6 +25,7 @@
           </form>
         </div>
       </div>
+      <% } %>
       <div class="card-footer">2 days ago</div>
     </div>
   </div>
