add author to review model

--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -30,6 +30,7 @@
     </div>
   </div>
   <div class="col-6">
+    <% if(currentUser) {%>
     <form
       action="/spots/<%= spot.id %>/reviews"
       method="post"
@@ -64,7 +65,7 @@
       </div>
       <button class="btn btn-primary" type="submit">Submit</button>
     </form>
-    <% for (let review of spot.reviews) {%>
+    <% } %> <% for (let review of spot.reviews) {%>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
