--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -69,13 +69,18 @@
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <p class="card-subtitle mb-2 text-muted">
+          <%= review.author?.username %>
+        </p>
         <p class="card-text">Review: <%= review.body %></p>
+        <% if(currentUser && review.author?.equals(currentUser._id)) {%>
         <form
           action="/spots/<%= spot.id %>/reviews/<%= review.id %>?_method=DELETE"
           method="post"
         >
           <button class="btn btn-sm btn-danger">Delete</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
