refactor: group routes for spots

--- a/views/spots/edit.ejs
+++ b/views/spots/edit.ejs
@@ -4,7 +4,7 @@
     <h1>Edit Spot</h1>
     <form
       class="needs-validation"
-      action="/spots/<%=spot.id%>/edit?_method=PUT"
+      action="/spots/<%=spot.id%>/?_method=PUT"
       method="post"
       novalidate
     >
