--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -2,7 +2,13 @@
 <div class="row">
   <div class="col-6 offset-3">
     <h1>New Spot</h1>
-    <form class="needs-validation" action="/spots" method="post" novalidate>
+    <form
+      class="needs-validation"
+      action="/spots"
+      method="post"
+      novalidate
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -27,7 +33,8 @@
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
-        <input class="form-control" type="text" name="image" id="spot[image]" />
+        <input type="file" name="image" id="image" multiple />
+        <!-- <input class="form-control" type="text" name="image" id="spot[image]" /> -->
       </div>
 
       <div class="mb-3">
