edit: add more photos to spots

--- a/views/spots/edit.ejs
+++ b/views/spots/edit.ejs
@@ -7,6 +7,7 @@
       action="/spots/<%=spot.id%>/?_method=PUT"
       method="post"
       novalidate
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
@@ -34,14 +35,9 @@
       </div>
 
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          name="image"
-          id="spot[image]"
-          value="<%= spot.image %>"
-        />
+        <%- include('../partials/carousel', {images: spot.images}) %>
+        <label class="form-label" for="image">Add more images</label>
+        <input type="file" name="image" id="image" multiple />
       </div>
 
       <div class="mb-3">
