--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -32,7 +32,7 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
+        <label class="form-label" for="image">Image upload</label>
         <input type="file" name="image" id="image" multiple />
         <!-- <input class="form-control" type="text" name="image" id="spot[image]" /> -->
       </div>
