--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -9,35 +9,7 @@
         <p class="card-text"><%= spot.description %></p>
         <p class="card-text"><%= spot.location %></p>
         <p class="card-text">submitted by <%= spot.author.username %></p>
-        <div id="spotCarousel" class="carousel slide">
-          <div class="carousel-inner">
-            <% spot.images.forEach((img,i) => {%>
-            <div class="carousel-item <%= i === 0? 'active' : '' %>">
-              <img src="<%= img.url %>" class="d-block w-100" alt="..." />
-            </div>
-            <% }) %>
-          </div>
-          <% if(spot.images.length > 1) {%>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#spotCarousel"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#spotCarousel"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-          <% }%>
-        </div>
+        <%- include('../partials/carousel', {images: spot.images}) %>
       </div>
       <% if(currentUser && spot.author.equals(currentUser._id)) {%>
       <div class="card-body">
