--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -33,8 +33,16 @@
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image upload</label>
-        <input type="file" name="image" id="image" multiple />
-        <!-- <input class="form-control" type="text" name="image" id="spot[image]" /> -->
+        <div class="mb-3">
+          <label for="formFile" class="form-label">Upload Image</label>
+          <input
+            class="form-control"
+            type="file"
+            id="formFile"
+            name="image"
+            multiple
+          />
+        </div>
       </div>
 
       <div class="mb-3">
