use virtual property for image thumbnail

--- a/views/spots/edit.ejs
+++ b/views/spots/edit.ejs
@@ -38,7 +38,7 @@
         <div class="mb-3">
           <% spot.images.forEach((image,i) => { %>
           <img
-            src="<%= image.url %>"
+            src="<%= image.thumbnail %>"
             class="img-thumbnail"
             alt="<%= spot.title %>"
           />
