add marker to the map

--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -103,5 +103,6 @@
 </div>
 <script>
   const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+  const spot = '<%- JSON.stringify(spot) %>';
 </script>
 <script src="/js/showPageMap.js"></script>
