--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/Boilerplate') %>
-<h1>Welcome to the spots page!!</h1>
-<h2>Spots</h2>
+
+<div id="map" style="width: 100%; height: 500px"></div>
+<h2>All Spots</h2>
 <div>Add new campground <a href="/spots/new">New Spot</a></div>
 
 <% for (let spot of spots) {%>
@@ -20,3 +21,11 @@
   </div>
 </div>
 <% } %>
+<script>
+  const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+  const geoJsonSpots = {
+    type: 'FeatureCollection',
+    features: <%- JSON.stringify(spots) %>
+    }
+</script>
+<script src="/js/clusterMap.js"></script>
