--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,53 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="'viewport" content="width=device-width, initial-scale=1" />
-    <title>home</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UrbanX</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/stylesheets/home.css" />
   </head>
-  <body>
-    <h1>Welcome to the home page</h1>
+  <body class="d-flex text-center text-white bg-dark">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+        <div class="d-flex">
+          <h3>urban X</h3>
+          <nav class="nav ms-auto">
+            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link" href="/spots">Spots</a>
+            <% if(!currentUser) { %>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Register</a>
+            <% } else { %>
+            <a class="nav-link" href="/logout">Logout</a>
+            <% } %>
+          </nav>
+        </div>
+      </header>
+      <main class="px-3">
+        <h1>UrbanX</h1>
+        <p class="lead">
+          Explore derelict urban structures, abandoned ruins or hidden
+          components of the manmade environment.
+        </p>
+        <a
+          href="/spots"
+          class="btn btn-lg btn-secondary font-weight-bold border-white bg-white"
+          >View Spots</a
+        >
+      </main>
+      <footer class="mt-auto text-white-50">
+        <p>UrbanX 2024</p>
+      </footer>
+    </div>
   </body>
 </html>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous"
+></script>
