--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/home.css" />
+    <link rel="stylesheet" href="/stylesheets/background.css" />
   </head>
   <body class="d-flex text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -31,7 +32,7 @@
       <main class="px-3">
         <h1>UrbanX</h1>
         <p class="lead">
-          Explore derelict urban structures, abandoned ruins or hidden
+          Explore derelict urban structures, abandoned ruins <br />or hidden
           components of the manmade environment.
         </p>
         <a
