--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,27 +1,42 @@
 <% layout('layouts/Boilerplate') %>
-<h1>Login</h1>
-<form class="needs-validation" action="/login" method="post" novalidate>
-  <div class="mb-3">
-    <label class="form-label" for="title">Username</label>
-    <input
-      class="form-control"
-      type="text"
-      name="username"
-      id="username"
-      required
-    />
-    <div class="valid-feedback">Looks good!</div>
+<link rel="stylesheet" href="/stylesheets/background.css" />
+<div class="d-flex justify-content-center">
+  <div
+    class="card shadow p-4 text-center text-white"
+    style="background-color: rgba(0, 0, 0, 0.5)"
+  >
+    <h5 class="card-title">Login</h5>
+    <form class="needs-validation" action="/login" method="post" novalidate>
+      <div class="mb-3">
+        <label class="form-label" for="title">Username</label>
+        <input
+          class="form-control"
+          type="text"
+          name="username"
+          id="username"
+          placeholder="Username"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="password">Password</label>
+        <input
+          class="form-control"
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <input
+        class="btn"
+        style="background-color: cadetblue; color: white"
+        type="submit"
+        value="Login"
+      />
+    </form>
   </div>
-  <div class="mb-3">
-    <label class="form-label" for="password">Password</label>
-    <input
-      class="form-control"
-      type="password"
-      name="password"
-      id="password"
-      required
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <input class="btn btn-success" type="submit" value="Login" />
-</form>
+</div>
