--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
             <a class="nav-link" href="/spots">Spots</a>
             <% if(!currentUser) { %>
             <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Register</a>
+            <a class="nav-link" href="/register">Sign Up</a>
             <% } else { %>
             <a class="nav-link" href="/logout">Logout</a>
             <% } %>
