--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -30,7 +30,7 @@
       <ul class="navbar-nav">
         <% if (!currentUser) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/register">Register</a>
+          <a class="nav-link" href="/register">Sign Up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
