--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,32 +1,46 @@
 <% layout('layouts/Boilerplate') %>
-<h1>Register</h1>
-<form class="needs-validation" action="/register" method="post" novalidate>
-  <div class="mb-3">
-    <label class="form-label" for="title">Username</label>
-    <input
-      class="form-control"
-      type="text"
-      name="username"
-      id="username"
-      required
-    />
-    <div class="valid-feedback">Looks good!</div>
+<link rel="stylesheet" href="/stylesheets/background.css" />
+<div class="d-flex justify-content-center">
+  <div
+    class="card shadow p-4 text-center text-white"
+    style="background-color: rgba(0, 0, 0, 0.5)"
+  >
+    <h5 class="card-title">Sign Up</h5>
+    <form class="needs-validation" action="/register" method="post" novalidate>
+      <div class="mb-3">
+        <label class="form-label" for="title">Username</label>
+        <input
+          class="form-control"
+          type="text"
+          name="username"
+          id="username"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="email">Email</label>
+        <input
+          class="form-control"
+          type="email"
+          name="email"
+          id="email"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="password">Password</label>
+        <input
+          class="form-control"
+          type="password"
+          name="password"
+          id="password"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <input class="btn btn-success" type="submit" value="Sign Up" />
+    </form>
   </div>
-  <div class="mb-3">
-    <label class="form-label" for="email">Email</label>
-    <input class="form-control" type="email" name="email" id="email" required />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <div class="mb-3">
-    <label class="form-label" for="password">Password</label>
-    <input
-      class="form-control"
-      type="password"
-      name="password"
-      id="password"
-      required
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <input class="btn btn-success" type="submit" value="Register" />
-</form>
+</div>
