--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7,3 +7,13 @@ body {
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 0 10px rgba(0, 0, 0, 0.6);
 }
+
+#cluster-map {
+  width: 100%;
+  height: 100%;
+}
+
+#map {
+  width: 100%;
+  height: 300px;
+}
