--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,6 +14,7 @@
       href="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/stylesheets/app.css" />
     <title>Boilerplate</title>
   </head>
   <body class="d-flex flex-column vh-100">
