--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -4,7 +4,7 @@ body {
     url('https://images.unsplash.com/photo-1546199880-67fc76cb4e5a?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
   background-position: center;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+  /* text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); */
   box-shadow: inset 0 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
@@ -16,4 +16,8 @@ body {
 #map {
   width: 100%;
   height: 300px;
+}
+
+.transparent-muted {
+  background-color: rgba(0, 0, 0, 0.5);
 }
