--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -5,25 +5,24 @@
       <div id="map" style="width: 100%; height: 80vh"></div>
     </div>
     <div class="col-md-6 text-white">
-      <h2>All Spots</h2>
-      <div>Add new campground <a href="/spots/new">New Spot</a></div>
-      <% for (let spot of spots) {%>
-      <div class="card">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="img-fluid" src="<%= spot.images[0]?.url %>" alt="" />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title"><%= spot.title %></h5>
-              <p class="card-text"><%= spot.description %></p>
-              <p><%= spot.location %></p>
-              <a href="/spots/<%= spot.id %>">View Spot</a>
-            </div>
+      <div class="row overflow-scroll" style="height: 80vh">
+        <% for (let spot of spots) {%>
+        <div class="col-lg-4 col-md-6 mb-3">
+          <div class="card">
+            <a href="/spots/<%= spot.id %>">
+              <img
+                class="card-img-top"
+                src="<%= spot.images[0]?.url %>"
+                alt=""
+              />
+            </a>
+            <!-- <div class="card-body"> -->
+            <div class="card-footer">📍<%= spot.location %></div>
+            <!-- </div> -->
           </div>
         </div>
+        <% } %>
       </div>
-      <% } %>
     </div>
   </div>
 </div>
