--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,9 +1,6 @@
 <% layout('layouts/Boilerplate') %>
 <div class="d-flex justify-content-center">
-  <div
-    class="card shadow p-4 text-center text-white"
-    style="background-color: rgba(0, 0, 0, 0.5)"
-  >
+  <div class="card shadow p-4 text-center text-white transparent-muted">
     <h5 class="card-title">Sign Up</h5>
     <form class="needs-validation" action="/register" method="post" novalidate>
       <div class="mb-3">
