--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -13,11 +13,20 @@ body {
   height: 100%;
 }
 
-#map {
-  width: 100%;
-  height: 300px;
-}
-
 .transparent-muted {
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.vh-80 {
+  height: 80vh;
+}
+
+.container-height {
+  height: 45rem;
+}
+
+.img-container {
+  max-width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
