--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -2,10 +2,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <div id="map" style="width: 100%; height: 80vh"></div>
+      <div id="map" class="vh-80 wd-100"></div>
     </div>
     <div class="col-md-6 text-white">
-      <div class="row overflow-scroll" style="height: 80vh">
+      <div class="row overflow-scroll vh-80">
         <% for (let spot of spots) {%>
         <div class="col-lg-4 col-md-6 mb-3">
           <div class="card">
