--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -7,7 +7,7 @@
     <div class="col-md-6 text-white">
       <div class="row overflow-scroll vh-80">
         <% for (let spot of spots) {%>
-        <div class="col-lg-4 col-md-6 mb-3">
+        <div class="col-lg-4 col-md-6 mb-3 d-flex align-items-stretch">
           <div class="card">
             <a href="/spots/<%= spot.id %>">
               <img
