--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -11,6 +11,7 @@
           <div class="card">
             <a href="/spots/<%= spot.id %>">
               <img
+                crossorigin="anonymous"
                 class="card-img-top"
                 src="<%= spot.images[0]?.url %>"
                 alt=""
