--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -50,7 +50,7 @@
           <textarea
             class="form-control"
             name="description"
-            id="spot[description]"
+            id="description"
           ></textarea>
         </div>
         <input class="btn btn-success" type="submit" value="Create Spot" />
