--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/stars.css" />
 <div class="row mb-3">
   <div class="col-lg-6">
-    <div class="card mb-3 container-height">
+    <div class="card mb-3 container-height overflow-scroll">
       <h5 class="card-header"><%= spot.title %></h5>
       <div class="card-body">
         <h5 class="card-title"><%= spot.location %></h5>
@@ -28,10 +28,16 @@
       <div class="card-footer">submitted by <%= spot.author.username %></div>
     </div>
   </div>
-  <div class="col-lg-6">
+  <div
+    class="col-lg-6 transparent-muted text-white container-height overflow-scroll"
+  >
+    <h5 class="p-2">Explore</h5>
     <div
-      class="card d-flex transparent-muted text-white container-height overflow-scroll"
-    >
+      id="map"
+      class="align-self-center p-3 m-3 rounded-3 bg-body-tertiary wd-100"
+      style="height: 400px"
+    ></div>
+    <div class="d-flex flex-direction-column">
       <% if(currentUser) {%>
       <div class="card mb-3 transparent-muted text-white align-self-center">
         <form
@@ -80,40 +86,36 @@
           <button class="btn btn-primary" type="submit">Submit</button>
         </form>
       </div>
-      <% } %> <% for (let review of spot.reviews) {%>
-      <div class="card mb-3 w-75 align-self-center">
-        <div class="card-body">
-          <p class="card-subtitle mb-2 text-muted">
-            <%= review.author?.username %>
-          </p>
-          <p class="starability-result" data-rating="<%= review.rating %>"></p>
-          <p class="card-text"><%= review.body %></p>
-          <% if(currentUser && review.author?.equals(currentUser._id)) {%>
-          <form
-            action="/spots/<%= spot.id %>/reviews/<%= review.id %>?_method=DELETE"
-            method="post"
-          >
-            <button class="btn btn-sm btn-danger">Delete</button>
-          </form>
-          <% } %>
-        </div>
-      </div>
       <% } %>
     </div>
   </div>
 </div>
 <div class="row">
-  <div class="col-12 text-white text-center rounded-3 transparent-muted">
-    <h5 class="p-2">Explore</h5>
-    <div
-      id="map"
-      class="align-self-center p-3 m-3 rounded-3 bg-body-tertiary wd-100"
-      style="height: 400px"
-    ></div>
+  <h5>Reviews</h5>
+  <% for (let review of spot.reviews) {%>
+
+  <div class="card mb-3">
+    <div class="card-body">
+      <p class="card-subtitle mb-2 text-muted">
+        <%= review.author?.username %>
+      </p>
+      <p class="starability-result" data-rating="<%= review.rating %>"></p>
+      <p class="card-text"><%= review.body %></p>
+      <% if(currentUser && review.author?.equals(currentUser._id)) {%>
+      <form
+        action="/spots/<%= spot.id %>/reviews/<%= review.id %>?_method=DELETE"
+        method="post"
+      >
+        <button class="btn btn-sm btn-danger">Delete</button>
+      </form>
+      <% } %>
+    </div>
   </div>
+
+  <% } %>
 </div>
 <script>
   const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
-  const spot = '<%- JSON.stringify(spot) %>';
+  const coordinates = '<%- JSON.stringify(spot.geometry.coordinates) %>';
 </script>
 <script src="/js/showPageMap.js"></script>
