boiler lowercase to fix

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/Boilerplate') %>
+<% layout('layouts/boilerplate') %>
 <div class="d-flex justify-content-center">
   <div class="card shadow p-4 text-center text-white transparent-muted">
     <h5 class="card-title">Sign Up</h5>
