--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/stylesheets/app.css" />
-    <title>Boilerplate</title>
+    <title>boilerplate</title>
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar.ejs') %>
