--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/Boilerplate') %>
+<% layout('layouts/boilerplate') %>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
