--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/Boilerplate') %>
+<% layout('layouts/boilerplate') %>
 <div class="row">
   <div class="col-6 offset-3">
     <div class="card p-3 text-white transparent-muted">
