--- a/views/spots/show.ejs
+++ b/views/spots/show.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/Boilerplate') %>
+<% layout('layouts/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
 <div class="row mb-3">
   <div class="col-lg-6">
