add validation:only img files are allowed

--- a/views/spots/new.ejs
+++ b/views/spots/new.ejs
@@ -42,6 +42,7 @@
               name="image"
               multiple
             />
+            <div id="fileError" class="alert alert-danger d-none"></div>
           </div>
         </div>
 
@@ -58,3 +59,4 @@
     </div>
   </div>
 </div>
+<script src="/js/validateImgs.js"></script>
