optimize img size with thumbnail and f&q auto

--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -7,7 +7,7 @@
     >
       <img
         crossorigin="anonymous"
-        src="<%= img.url %>"
+        src="<%= img.transformedImg %>"
         class="d-block w-100 img-container"
         alt="..."
       />
