--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -14,7 +14,7 @@
                 <img
                   crossorigin="anonymous"
                   class="card-img-top"
-                  src="<%= spot.images[0]?.url %>"
+                  src="<%= spot.images[0]?.thumbnail %>"
                   alt=""
                 />
               </a>
